overflow issue resolved

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,24 +1,17 @@
-/* * {
+* {
     box-sizing: border-box;
-} */
+}
 
-
-
-   html, body{
-       width: 100%;
-       height: 100%;
-       background-color: lightgrey;
-   }
 
    /* #enter-your-address { */
-    body {   
-    height: 100%;
-       width: 100%;
+    body, html {   
        background-size: auto;
        background-position: center center;
        background-image: url("https://www.ppt-backgrounds.net/images/patriotic-star--hd-atsmap--keynote-ppt-templates.jpg")
        ;
+       
    }
+   
 
    #address-label {
        color: white;
@@ -186,6 +179,21 @@ color: red;
 }
 
 .result {
-    -webkit-column-count: 5;
-    column-count: 5;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+    
+}
+
+.rep-container {
+    
+    text-align: center;
+    padding: 10px;
+    border: 1px solid black;
+    width: 100%
+}
+
+.new-li {
+    list-style: none;
+    padding: 5px;
 }
